--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .headline {
   text-align: center;
 }
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+    width: 100%;
+    padding-inline: 30px;
+}
