--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
   text-align: center;
 }
 .container {
-    max-width: 1140px;
+    max-width: 90vw;
     margin: 0 auto;
     width: 100%;
-    padding-inline: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
 }
