--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 20px 0;
   font-family: "Poppins","Rubik","Montserrat","Mulish",sans-serif;
 
   -webkit-font-smoothing: antialiased;
